--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@ footer {
   background-color: black;
 }
 .puppy {
-  background-image: url(/Froggy/images/lab.jpg);
+  background-color: pink;
   background-size: contain;
 }
 .kennel {
